--- a/Active/about.html
+++ b/Active/about.html
@@ -61,11 +61,11 @@
     <!-- Page Title -->
     <div class="page-title light-background">
       <div class="container">
-        <h1>About</h1>
+        <h1>La Vecinal</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li class="current">Nosotros</li>
           </ol>
         </nav>
       </div>
