--- a/Active/blog-details.html
+++ b/Active/blog-details.html
@@ -61,7 +61,7 @@
     <!-- Page Title -->
     <div class="page-title light-background">
       <div class="container">
-        <h1>Blog Details</h1>
+        <h1>Blog Deta</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
