--- a/Active/team.html
+++ b/Active/team.html
@@ -45,11 +45,11 @@
         <ul>
           <li><a href="index.html" class="active">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
-          <li><a href="services.html">Servicios</a></li>
-          <li><a href="portfolio.html">Proyetos</a></li>
+          <li><a href="#">Servicios</a></li>
+          <li><a href="#">Proyetos</a></li>
           <li><a href="team.html">Comision</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="#">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
